--- a/liveChat/public/style.css
+++ b/liveChat/public/style.css
@@ -59,7 +59,7 @@ body{
     background: #17202b;
     border: 0;
     font-size: 1rem;
-    padding: .65rem 1rem;
+    padding: .65rem 1rem 2rem 1rem;
     color: aliceblue;
     position: relative;
     font-weight: 600;
@@ -67,7 +67,7 @@ body{
     height: 20px;
 }
 
-.container {
+#container {
     font-family: 'Motserrat', sans-serif;
     border: 2px solid #dedede;
     background-color: #f1f1f1;
@@ -76,7 +76,7 @@ body{
     margin: 10px 0;
 }
 
-.container::after {
+#container::after {
     content: "";
     clear: both;
     display: table;
@@ -131,7 +131,7 @@ body{
         border: none;
 }
 
-.button {
+#button {
     width: 10%;
     height: 100%;
     font-size: 16px;
@@ -141,3 +141,33 @@ body{
     text-transform: uppercase;
     cursor: pointer;
 }
+
+
+.ThisbuttonWB {
+    margin-top: 10px;
+    margin-left: 50px;
+    padding: 1.3em 3em;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 1s ease 0s;
+    cursor: pointer;
+    outline: none;
+   }
+   
+   button:hover {
+    background-color: #2EE59D;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+   }
+   
+   button:active {
+    transform: translateY(-1px);
+   }
